fixing button text and disable horizontal scrolling

--- a/client/css/cardsUI.css
+++ b/client/css/cardsUI.css
@@ -25,6 +25,7 @@
 		height:100%;
 		border:none;
 		padding:0px;
+		overflow-x: hidden;
 		/*font-size: 0px;*/
   		/*letter-spacing: 0px;
  		word-spacing: 0px;*/
