--- a/client/css/homepage.css
+++ b/client/css/homepage.css
@@ -68,7 +68,7 @@ a, a:hover, a:visited{
         display:inline-block;
         color:#444;
         font-family:arial;
-        font-size:1.5em;
+        font-size:1.2em;
         font-weight:bold;
         padding:8% 0% 7% 0%;
         text-decoration:none;
